# sign-aws-request

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: pr.yml  publish.yml
src/: aws.rs  consts.rs  errors.rs  main.rs  request.rs  serve.rs  test.rs
