[package]
name = "sign-aws-request"
version = "0.1.0"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
clap = { git = "https://github.com/clap-rs/clap/", tag = "v3.0.0-beta.2" }
loggerv = "0.7"
dotenv = "0.15.0"
error-enum = { git = "https://github.com/ethankhall/error-enum-generator", rev = "b5f3276a8d967fc58149d0698a342539ebcec55e" }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
hyper-tls = "0.4"
lazy_static = "1.4"
regex = "1"
http = "0.2"
rusoto_credential = "0.45.0"
rusoto_sts = "0.45.0"
async-trait = "0.1.40"
bytes = "0.5"
percent-encoding = "2.1.0"
chrono = "0.4"
time = "0.2"
hex = "0.4"
sha2 = "0.9"
hmac = "0.9.0"
url = "2"

[dev-dependencies]
env_logger = "0.7"